src/snapshots/bytelox__scanner__tests__string.snap
---
source: src/scanner.rs
expression: tokens
---
- value:
    String: hello
  type: String
  start: 0
  length: 7
  line: 1
- value: ~
  type: Eof
  start: 7
  length: 1
  line: 1
