src/snapshots/bytelox__scanner__tests__var_decl.snap
---
source: src/scanner.rs
expression: tokens
---
- value: ~
  type: Var
  start: 0
  length: 3
  line: 1
- value:
    Identifier: x
  type: Identifier
  start: 4
  length: 1
  line: 1
- value: ~
  type: Equal
  start: 7
  length: 1
  line: 1
- value:
    Number: 10
  type: Number
  start: 8
  length: 2
  line: 1
- value: ~
  type: Semicolon
  start: 11
  length: 1
  line: 1
- value: ~
  type: Eof
  start: 11
  length: 1
  line: 1
